Neues Design (JS auskommentiert zum Testen).

--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en" style="height: 100%;">
+<head>
+    <meta charset="UTF-8">
+    <title>Tobias Dolfen</title>
+</head>
+<body style="height: calc(100% - 16px); background: url('https://tdolfen.github.io/public/assets/images/water_bg.jpg')">
+<div style="width: 80%;height: calc(100% - 20px);margin: 0 auto;padding: 10px;background-color: #e7e7e7; border-radius: 30px;">
+    <h1 style="text-align: center;">Warte kurz... Du wirst jeden Moment weitergeleitet...</h1>
+    <p style="text-align: center;">Falls nichts passiert, klicke bitte <a href="https://tdolfen.github.io/public">hier</a>!</p>
+</div>
 <script type="text/javascript">
-    window.location.href = "https://tdolfen.github.io/public";
+    // window.location.href = "https://tdolfen.github.io/public";
 </script>
+</body>
+</html>
