--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Tobias Dolfen</title>
 </head>
-<body style="height: calc(100% - 16px); background: url('https://tdolfen.github.io/public/assets/images/water_bg.jpg')">
+<body style="height: calc(100% - 16px); background-color: #E3F2FD">
 <div style="width: 80%;height: calc(100% - 20px);margin: 0 auto;padding: 10px; position: relative">
-    <div style="position: absolute;width: 100%;height: 100%;top: 0;left: 0;background-color: #e7e7e7;border-radius: 30px;z-index: -1;opacity: 60%;"></div>
+    <div style="position: absolute;width: 100%;height: 100%;top: 0;left: 0;background-color: #fff;border-radius: 30px;z-index: -1;opacity: 80%;"></div>
     <div style="margin-top: 25%">
         <h1 style="text-align: center;">Warte kurz... Du wirst jeden Moment weitergeleitet...</h1>
         <h3 style="text-align: center;">Falls nichts passiert, klicke bitte <a
