--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-173150804-1', { ‚anonymize_ip‘: true });
+      gtag('config', 'UA-173150804-1', { 'anonymize_ip': true });
     </script>
 
     <meta charset="UTF-8">
