--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100%;">
+<html lang="en" style="height: 100vh;">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173150804-1"></script>
@@ -10,7 +10,6 @@
 
       gtag('config', 'UA-173150804-1');
     </script>
-
     <meta charset="UTF-8">
     <title>Tobias Dolfen</title>
 </head>
