--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173150804-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
 
-      gtag('config', 'UA-173150804-1', { 'anonymize_ip': true });
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'UA-173150804-1', {'anonymize_ip': true});
     </script>
     <meta charset="UTF-8">
     <title>Tobias Dolfen</title>
@@ -19,7 +22,7 @@
     <div style="margin-top: 25%">
         <h1 style="text-align: center;">Warte kurz... Du wirst jeden Moment weitergeleitet...</h1>
         <h3 style="text-align: center;">Falls nichts passiert, klicke bitte <a
-            href="https://tdolfen.github.io/public">hier</a>!</h3>
+                href="https://tdolfen.github.io/public">hier</a>!</h3>
     </div>
 </div>
 <script type="text/javascript">
