--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,13 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173150804-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
 
-        gtag('config', 'UA-173150804-1');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'UA-173150804-1', {'anonymize_ip': true});
     </script>
     <meta charset="UTF-8">
     <title>Tobias Dolfen</title>
